packages/dart_edge_openai_audio_client/lib/src/native/generated_bindings.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset(
  'package:dart_edge_openai_audio_client/dart_edge_openai_audio_client.dart',
)
library;

import 'dart:ffi' as ffi;

import 'package:dart_edge_native_bridge/dart_edge_native_bridge.dart' as imp$1;

@ffi.Native<
  ffi.Pointer<NativeOpenAiAudioCreateResult> Function(
    ffi.Pointer<NativeOpenAiAudioClientConfig>,
  )
>()
external ffi.Pointer<NativeOpenAiAudioCreateResult>
dart_edge_openai_audio_client_create(
  ffi.Pointer<NativeOpenAiAudioClientConfig> config,
);

@ffi.Native<ffi.Void Function(ffi.Int64)>(isLeaf: true)
external void dart_edge_openai_audio_client_dispose(int handle);

@ffi.Native<ffi.Void Function(ffi.Pointer<NativeOpenAiAudioCreateResult>)>(
  isLeaf: true,
)
external void dart_edge_openai_audio_client_free_create_result(
  ffi.Pointer<NativeOpenAiAudioCreateResult> value,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<NativeOpenAiAudioTranscriptionResult>)
>(isLeaf: true)
external void dart_edge_openai_audio_client_free_transcription_result(
  ffi.Pointer<NativeOpenAiAudioTranscriptionResult> value,
);

@ffi.Native<ffi.Int32 Function()>(isLeaf: true)
external int dart_edge_openai_audio_client_native_abi_version();

@ffi.Native<
  ffi.Pointer<NativeOpenAiAudioTranscriptionResult> Function(
    ffi.Int64,
    ffi.Pointer<NativeOpenAiAudioTranscriptionRequest>,
    ffi.Pointer<ffi.Uint8>,
    ffi.IntPtr,
  )
>()
external ffi.Pointer<NativeOpenAiAudioTranscriptionResult>
dart_edge_openai_audio_client_transcribe_bytes(
  int handle,
  ffi.Pointer<NativeOpenAiAudioTranscriptionRequest> request,
  ffi.Pointer<ffi.Uint8> bytes_ptr,
  int bytes_len,
);

@ffi.Native<
  ffi.Pointer<NativeOpenAiAudioTranscriptionResult> Function(
    ffi.Int64,
    ffi.Pointer<NativeOpenAiAudioTranscriptionRequest>,
    ffi.Pointer<imp$1.NativeByteStream>,
    ffi.Int64,
  )
>()
external ffi.Pointer<NativeOpenAiAudioTranscriptionResult>
dart_edge_openai_audio_client_transcribe_native_stream(
  int handle,
  ffi.Pointer<NativeOpenAiAudioTranscriptionRequest> request,
  ffi.Pointer<imp$1.NativeByteStream> stream,
  int content_length,
);

final class NativeOpenAiAudioClientConfig extends ffi.Struct {
  external ffi.Pointer<ffi.Char> base_url;

  external ffi.Pointer<ffi.Char> api_key;

  external ffi.Pointer<NativeOpenAiAudioStringPair> headers;

  @ffi.IntPtr()
  external int headers_len;

  @ffi.Int64()
  external int connect_timeout_ms;

  @ffi.Int64()
  external int request_timeout_ms;

  @ffi.Int64()
  external int max_response_bytes;

  @ffi.Bool()
  external bool allow_http;
}

final class NativeOpenAiAudioCreateResult extends ffi.Struct {
  @ffi.Int64()
  external int handle;

  external ffi.Pointer<ffi.Char> error;
}

final class NativeOpenAiAudioStringPair extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> value;
}

final class NativeOpenAiAudioTranscriptionRequest extends ffi.Struct {
  external ffi.Pointer<ffi.Char> filename;

  external ffi.Pointer<ffi.Char> content_type;

  external ffi.Pointer<NativeOpenAiAudioStringPair> fields;

  @ffi.IntPtr()
  external int fields_len;
}

final class NativeOpenAiAudioTranscriptionResult extends ffi.Struct {
  @ffi.Int32()
  external int status_code;

  external ffi.Pointer<ffi.Char> body;

  external ffi.Pointer<ffi.Char> content_type;

  external ffi.Pointer<ffi.Char> request_id;

  external ffi.Pointer<ffi.Char> error;
}
